--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,4 +24,4 @@ jobs:
           go run main.go
 
       - name: Build
-        run: go build main.go
+        run: go build -v -o buildfile main.go
