--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.20.4'
-        
+          
       - name: Run
         run: |
           go run main.go
@@ -26,4 +26,4 @@ jobs:
       - name: Build
         run: |
           mkdir -p build
-          go build -v -o ./build/buildfile main.go
+          go build -v -o ./build/buildfile ./main.go
